<?xml version="1.0"?>
<package format="2">
  <name>map_generator</name>
  <version>1.2.0</version>
  <description>The map_generator package</description>

  <maintainer email="yuweiwu@seas.upenn.edu">yuweiwu</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>semantic_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>semantic_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>semantic_msgs</exec_depend>
  

</package>
