cmake_minimum_required(VERSION 2.8.3)
project(param_env)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-std=c++11")
ADD_COMPILE_OPTIONS(-std=c++11 )
ADD_COMPILE_OPTIONS(-std=c++14 )
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")

find_package(PCL 1.7 REQUIRED)
find_package(Eigen3 REQUIRED)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  rosbag
  std_msgs
  geometry_msgs
  pcl_conversions
  kr_planning_msgs
)

include_directories(
  SYSTEM
  include
  ${catkin_INCLUDE_DIRS}
  ${EIGEN3_INCLUDE_DIR}
  ${PCL_INCLUDE_DIRS}
)


catkin_package(
 INCLUDE_DIRS include
 LIBRARIES param_env
#  DEPENDS system_lib
)

add_executable (structure_map src/structure_map.cpp)

target_link_libraries(structure_map
  ${catkin_LIBRARIES}
  ${PCL_LIBRARIES})


add_executable (read_grid_map src/read_grid_map.cpp)

target_link_libraries(read_grid_map
  ${catkin_LIBRARIES}
  ${PCL_LIBRARIES})


add_executable (map_gen src/map_gen.cpp)

target_link_libraries(map_gen
  ${catkin_LIBRARIES}
  ${PCL_LIBRARIES})

  