<?xml version="1.0"?>
<package format="2">
  <name>param_env</name>
  <version>1.0.0</version>
  <description>The parameterized map package</description>

  <maintainer email="yuweiwu@seas.upenn.edu">Yuwei Wu</maintainer>

  <author>Yuwei Wu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>kr_planning_msgs</depend>
</package>
